--- a/about.html
+++ b/about.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>关于我 - 我的个人网站</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title>About Me - My Personal Website</title>
+  <!-- Google Fonts (example) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap"
+    rel="stylesheet"
+  />
 
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <header class="site-header">
@@ -16,51 +20,88 @@
       <div class="logo">My Logo</div>
       <nav class="site-nav">
         <ul>
-          <li><a href="index.html">主页</a></li>
-          <li><a href="about.html" class="active">关于我</a></li>
-          <li><a href="portfolio.html">作品集</a></li>
-          <li><a href="contact.html">联系方式</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html" class="active">About Me</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact Info</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
   <section class="page-banner">
-    <h1>关于我</h1>
+    <h1>About Me</h1>
   </section>
 
   <section class="container about-section">
     <div class="about-text">
-      <h2>个人简介</h2>
+      <h2>Personal Introduction</h2>
       <p>
-        我是[你的名字]，来自[你的城市]。我是一名[你的职业]，擅长[你的技能或专长]。
-        这里可以详细介绍你的经历、教育背景、兴趣爱好、职业规划等等。
-      </p>
-      <p>
-        你可以写一些励志或有趣的话让访客更好地了解你，比如：
-        “我热爱探索新技术，平时喜欢写代码、看书和跑步，期待与更多志同道合的朋友交流！”
-      </p>
+        I am Lee ZH, from China. I'm a Freelance Developer focused
+        on AI, Physics, and Programming, specialized in Physics or AI.
+      <div class="content-section">
+  <h2><strong>AI and Impact</strong></h2>
+  <p>Since encountering artificial intelligence, I’ve been fascinated by its potential to create significant societal and economic value. I believe AI will profoundly shape the future.</p>
+</div>
+        <div class="content-section">
+  <h2><strong>Quantum Physics</strong></h2>
+  <p>I’ve been self-studying physics, especially quantum mechanics, as I see the fusion of AI and quantum physics as a pathway to revolutionary advancements.</p>
+</div>
+
+<div class="content-section">
+  <h2><strong>Programming and Technology</strong></h2>
+  <p>Programming drives modern technology, enabling breakthroughs across industries. I’m passionate about using it to solve real-world challenges.</p>
+</div>
+
+<div class="content-section">
+  <h2><strong>Scientific Research</strong></h2>
+  <p>AI will play a crucial role in accelerating scientific discovery and deepening our understanding of the world around us.</p>
+</div>
+
+<div class="content-section">
+  <h2><strong>Simulation and the Real World</strong></h2>
+  <p>AI can simulate and optimize complex systems, offering new solutions to real-world challenges.</p>
+</div>
+      <div class="content-section">
+  <h2><strong>Artistic Expression</strong></h2>
+  <p>AI’s impact goes beyond technology—it’s also transforming art. I’m excited about AI’s potential in visual arts and music creation.</p>
+</div>
+
+<div class="content-section">
+  <h2><strong>Interdisciplinary Exploration</strong></h2>
+  <p>AI will drive the development of multiple fields, fostering innovation and collaboration across disciplines.</p>
+</div>
+
+<hr>
+
+       <div class="personal-statement">
+  <h2><strong>Personal Statement</strong></h2>
+  <p>"I love exploring new technologies, coding, AI, physics and maths. I’m always excited to connect with like-minded individuals passionate about innovation and progress!"</p>
+</div>
+
+    <!-- Optionally place a profile image here -->
+    <!--
+    <div class="about-image">
+      <img src="images/profile.jpg" alt="Profile Image" />
     </div>
-    <!-- 可放置个人照片或形象图 -->
-    <!-- <div class="about-image">
-      <img src="images/profile.jpg" alt="Profile Image">
-    </div> -->
+    -->
   </section>
 
   <section class="skills container">
-    <h2>我的技能</h2>
+    <h2>My Skills</h2>
     <ul class="skill-list">
-      <li>HTML / CSS / JavaScript</li>
-      <li>Python / Flask / Django</li>
-      <li>React / Vue / Angular</li>
-      <li>UI/UX 设计 / 视觉审美</li>
-      <!-- 更多技能 -->
+      <li>Code:Python、Java</li>
+      <li>PyCharm / Flask / GitHub</li>
+      <li>AI And Data Analysis</li>
+      <li>Physics And Maths</li>
+      <li>Quantitative Analysis and Modeling</li>
+      <!-- Add more skills as needed -->
     </ul>
   </section>
 
   <footer class="site-footer">
     <div class="container">
-      <p>&copy; 2024 [你的名字] | 保留所有权利</p>
+      <p>&copy; 2024 LeeZH | All Rights Reserved</p>
     </div>
   </footer>
 </body>
