--- a/index.html
+++ b/index.html
@@ -1,56 +1,66 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>主页 - 我的个人网站</title>
-  <!-- 引入 Google Fonts 示例：可自行替换喜欢的字体 -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title>Home - My Personal Website</title>
+  <!-- Google Fonts (example) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap"
+    rel="stylesheet"
+  />
 
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-  <!-- 页头导航 -->
+  <!-- Header & Navigation -->
   <header class="site-header">
     <div class="container">
       <div class="logo">My Logo</div>
       <nav class="site-nav">
         <ul>
-          <li><a href="index.html" class="active">主页</a></li>
-          <li><a href="about.html">关于我</a></li>
-          <li><a href="portfolio.html">作品集</a></li>
-          <li><a href="contact.html">联系方式</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact Info</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
   <!-- Hero Banner -->
-  <section class="hero" style="background-image: url('images/hero-bg.jpg');">
+  <section class="hero" style="background-image: url('images/hero-bg.jpg')">
     <div class="hero-overlay"></div>
     <div class="hero-content">
-      <h1>你好！我是[你的名字]</h1>
-      <p>欢迎来到我的个人网站</p>
-      <a href="about.html" class="btn">了解更多</a>
+      <h1>Hello! I'm [Lee ZH]</h1>
+      <p>Welcome to my website</p>
+      <a href="about.html" class="btn">Learn More</a>
     </div>
   </section>
 
-  <!-- 简介/亮点展示 -->
+  <!-- Intro Section -->
   <section class="intro-section container">
-    <h2>简要介绍</h2>
+    <h2>Brief Introduction</h2>
     <p>
-      这里可以放置你最想让大家第一时间了解的介绍，比如你的专业背景、拿手的技能或者正在进行的项目。
-      你可以简单概括自身亮点，吸引访客继续了解你。
+      I am a student passionate about mathematics, physics, artificial intelligence,
+      and machine learning, with a solid foundation in both mathematics and programming,
+      Through self-study, I have acquired extensive knowledge in quantum mechanics,
+      modern physics, and mathematics, and I have developed competencies in machine learning and programming.
+      I am eager to apply this knowledge to solve real-world problems.
+      Originally majoring in Economics, I am currently transitioning
+      to study Physics and have cultivated a strong interest in AI and programming.
+      I have undertaken numerous small projects utilizing AI and programming,
+      including creating visualizations and numerical simulations in mathematics and physics.
     </p>
-    <a href="portfolio.html" class="btn secondary-btn">查看我的作品</a>
+    <a href="portfolio.html" class="btn secondary-btn">View My Work</a>
   </section>
 
-  <!-- 页脚 -->
+  <!-- Footer -->
   <footer class="site-footer">
     <div class="container">
-      <p>&copy; 2024 [你的名字] | 保留所有权利</p>
+      <p>&copy; 2024 LeeZH | All Rights Reserved</p>
     </div>
   </footer>
 </body>
