--- a/portfolio.html
+++ b/portfolio.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>作品集 - 我的个人网站</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title>Portfolio - My Personal Website</title>
+  <!-- Google Fonts (example) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap"
+    rel="stylesheet"
+  />
 
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <header class="site-header">
@@ -16,47 +20,53 @@
       <div class="logo">My Logo</div>
       <nav class="site-nav">
         <ul>
-          <li><a href="index.html">主页</a></li>
-          <li><a href="about.html">关于我</a></li>
-          <li><a href="portfolio.html" class="active">作品集</a></li>
-          <li><a href="contact.html">联系方式</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="portfolio.html" class="active">Portfolio</a></li>
+          <li><a href="contact.html">Contact Info</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
   <section class="page-banner">
-    <h1>作品集</h1>
+    <h1>Portfolio</h1>
   </section>
 
   <section class="container portfolio-section">
-    <h2>我的项目</h2>
+    <h2>My Projects</h2>
     <div class="portfolio-grid">
-      <!-- 项目卡片1 -->
+      <!-- Project Card 1 -->
       <div class="portfolio-card">
-        <img src="images/project1.jpg" alt="Project 1">
+        <img src="images/project1.jpg" alt="Project 1" />
         <div class="card-content">
-          <h3>项目名称1</h3>
-          <p>这是一个有关xxx的项目简介。可以简单介绍使用了哪些技术或完成了哪些功能。</p>
-          <a href="#" class="btn card-btn">查看详情</a>
+          <h3>Project Title 1</h3>
+          <p>
+            A brief description about this project. Mention the technologies
+            used or the main features accomplished.
+          </p>
+          <a href="https://github.com/QuanQLee/wave-simulator.git" class="btn card-btn">View Details</a>
         </div>
       </div>
-      <!-- 项目卡片2 -->
+      <!-- Project Card 2 -->
       <div class="portfolio-card">
-        <img src="images/project1.jpg" alt="Project 2">
+        <img src="images/project1.jpg" alt="Project 2" />
         <div class="card-content">
-          <h3>项目名称2</h3>
-          <p>这是一个有关xxx的项目简介。可以简单介绍使用了哪些技术或完成了哪些功能。</p>
-          <a href="#" class="btn card-btn">查看详情</a>
+          <h3>Project Title 2</h3>
+          <p>
+            A short introduction of what this project is about. Highlight the
+            technologies used or the main achievements.
+          </p>
+          <a href="https://github.com/QuanQLee/Function_Graph_Plotter.git" class="btn card-btn">View Details</a>
         </div>
       </div>
-      <!-- 可以继续添加更多卡片 -->
+      <!-- Add more project cards as needed -->
     </div>
   </section>
 
   <footer class="site-footer">
     <div class="container">
-      <p>&copy; 2024 [你的名字] | 保留所有权利</p>
+      <p>&copy; 2024 LeeZH | All Rights Reserved</p>
     </div>
   </footer>
 </body>
