--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>联系方式 - 我的个人网站</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title>Contact Info - My Personal Website</title>
+  <!-- Google Fonts (example) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap"
+    rel="stylesheet"
+  />
 
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <header class="site-header">
@@ -16,47 +20,47 @@
       <div class="logo">My Logo</div>
       <nav class="site-nav">
         <ul>
-          <li><a href="index.html">主页</a></li>
-          <li><a href="about.html">关于我</a></li>
-          <li><a href="portfolio.html">作品集</a></li>
-          <li><a href="contact.html" class="active">联系方式</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html" class="active">Contact Info</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
   <section class="page-banner">
-    <h1>联系方式</h1>
+    <h1>Contact Info</h1>
   </section>
 
   <section class="container contact-section">
-    <h2>联系我</h2>
-    <p>你可以通过以下表单或直接通过邮箱、社交媒体与我联系。</p>
-    <form action="mailto:your_email@example.com" method="post" enctype="text/plain">
-      <label for="name">姓名:</label>
-      <input type="text" id="name" name="name" required>
+    <h2>Get in Touch</h2>
+    <p>
+      Feel free to reach out to me through any of the following channels.
+      I'm always open to discussing new projects, creative ideas, or
+      opportunities to work together.
+    </p>
 
-      <label for="email">邮箱:</label>
-      <input type="email" id="email" name="email" required>
+    <div class="contact-details">
+      <h3>Email</h3>
+      <p><a href="mailto:your_email@example.com">lizhihong268810@gmail.com</a></p>
 
-      <label for="message">留言:</label>
-      <textarea id="message" name="message" rows="5" required></textarea>
+      <h3>Phone</h3>
+      <p></p>
 
-      <button type="submit" class="btn">发送</button>
-    </form>
-
-    <!-- 其他联系方式/社交媒体图标（可选） -->
-    <div class="social-links">
-      <p>或关注我的社交媒体：</p>
-      <a href="#" target="_blank">Weibo</a>
-      <a href="#" target="_blank">LinkedIn</a>
-      <a href="#" target="_blank">Github</a>
+      <h3>Social Media</h3>
+      <ul>
+        <li><a href="#" target="_blank">LinkedIn:18173933209</a></li>
+        <li><a href="#" target="_blank">GitHub:lizhihong268810@gmail.com</a></li>
+        <li><a href="#" target="_blank">X(twitter):leezhbb</a></li>
+        <!-- Add more links if necessary -->
+      </ul>
     </div>
   </section>
 
   <footer class="site-footer">
     <div class="container">
-      <p>&copy; 2024 [你的名字] | 保留所有权利</p>
+      <p>&copy; 2024 LeeZH | All Rights Reserved</p>
     </div>
   </footer>
 </body>
